fixed button styling and footer alignment

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@
     cursor: pointer;
 }
 
+#submitBtn:hover {
+    background-color: lightgreen;
+}
+
 #outputOrder {
     display: block;
     text-align: center;
@@ -43,7 +47,7 @@
 footer {
     display: block;
     text-align: center;
-    padding: 350px 45px;
+    padding: 440px 45px;
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
